# INTERPRETER

./: CMakeLists.txt  a.out  array.cpp  array.h  bool.cpp  bool.h  double.cpp  double.h  ete.cpp  ete.h  files.h  includes.h  int.cpp  int.h  main.cpp  readline.cpp  readline.h  string.cpp  string.h  text.txt  type.cpp  type.h  typecontroler.cpp  typecontroler.h
